name:          threads
version:       0.4.0.1
cabal-version: >= 1.9.2
build-type:    Custom
stability:     experimental
author:        Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
copyright:     (c) 2010 Bas van Dijk & Roel van Dijk
license:       BSD3
license-file:  LICENSE
homepage:      https://github.com/basvandijk/threads/
bug-reports:   https://github.com/basvandijk/threads/issues
category:      Concurrency
synopsis:      Fork threads and wait for their result
description:   This package provides functions to fork threads and
               wait for their result, whether it's an exception or a
               normal value.
               .
               Besides waiting for the termination of a single thread
               this packages also provides functions to wait for a
               group of threads to terminate.
               .
               This package is similar to the
	       @threadmanager@, @async@ and @spawn@ packages.
	       The advantages of this package are:
               .
               * Simpler API.
               .
               * More efficient in both space and time.
               .
               * No space-leak when forking a large number of threads.
               .
               * Correct handling of asynchronous exceptions.
               .
               * GHC specific functionality like @forkOnIO@ and @forkIOUnmasked@.

extra-source-files: README.markdown

source-repository head
  Type: git
  Location: git://github.com/basvandijk/threads.git

-------------------------------------------------------------------------------

library
  build-depends: base                 >= 3     && < 4.5
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , stm                  >= 2.1   && < 2.3
  exposed-modules: Control.Concurrent.Thread
                 , Control.Concurrent.Thread.Group
  other-modules: Mask
  ghc-options: -Wall

-------------------------------------------------------------------------------

test-suite test-threads
  type:    exitcode-stdio-1.0
  main-is: test.hs

  ghc-options: -Wall -threaded

  build-depends: base                       >= 3     && < 4.5
               , base-unicode-symbols       >= 0.1.1 && < 0.3
               , stm                        >= 2.1   && < 2.3
               , concurrent-extra           >= 0.5.1 && < 0.8
               , HUnit                      >= 1.2.2 && < 1.3
               , test-framework             >= 0.2.4 && < 0.5
               , test-framework-hunit       >= 0.2.4 && < 0.3

-------------------------------------------------------------------------------
