name:          threads
version:       0.5.1.7
cabal-version: >= 1.9.2
build-type:    Custom
stability:     experimental
author:        Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
               Roel van Dijk <vandijk.roel@gmail.com>
copyright:     2010–2012 Bas van Dijk & Roel van Dijk
license:       BSD3
license-file:  LICENSE
homepage:      https://github.com/basvandijk/threads
bug-reports:   https://github.com/basvandijk/threads/issues
category:      Concurrency
synopsis:      Fork threads and wait for their result
description:   This package provides functions to fork threads and
               wait for their result, whether it's an exception or a
               normal value.
               .
               Besides waiting for the termination of a single thread
               this packages also provides functions to wait for a
               group of threads to terminate.
               .
               This package is similar to the
               @threadmanager@, @async@ and @spawn@ packages.
               The advantages of this package are:
               .
               * Simpler API.
               .
               * More efficient in both space and time.
               .
               * No space-leak when forking a large number of threads.
               .
               * Correct handling of asynchronous exceptions.
               .
               * GHC specific functionality like @forkOn@ and @forkIOWithUnmask@.

extra-source-files: README.markdown

tested-with:
  GHC==7.2.2,
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.2,
  GHC==8.0.1,
  GHC==9.4.1

source-repository head
  Type: git
  Location: git://github.com/basvandijk/threads.git

custom-setup
    setup-depends: base >= 4.4 && < 5, Cabal >= 1.12 && < 3.9

-------------------------------------------------------------------------------

library
  default-language: Haskell2010
  build-depends: base >= 4.4 && < 5
               , stm  >= 2.1
  exposed-modules: Control.Concurrent.Thread
                 , Control.Concurrent.Thread.Group
  other-modules:   Control.Concurrent.Raw
  ghc-options: -Wall

-------------------------------------------------------------------------------

test-suite test-threads
  default-language: Haskell2010
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        test.hs
  ghc-options:    -Wall -threaded

  build-depends: threads
               , base                 >= 4.4 && < 5
               , stm                  >= 2.1
               , concurrent-extra     >= 0.5.1
               , HUnit                >= 1.2.2
               , test-framework       >= 0.2.4
               , test-framework-hunit >= 0.2.4
